<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/chat"
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_baseline_chat_24" />

    <item
        android:title="@string/explore"
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_baseline_view_list_24" />

    <item
        android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:title="@string/map"
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_baseline_map_24" />

    <item
        android:title="@string/settings"
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24" />

</menu>